--- a/contact/index.html
+++ b/contact/index.html
@@ -36,7 +36,7 @@ type: information
             </div>
             <div class="12u$">
                 <ul class="actions">
-                    <li><input type="submit" value="Send Message" class="special"></li>
+                    <li><input type="submit" value="Send Message" class="button special"></li>
                     <li><input type="reset" value="Reset"></li>
                 </ul>
             </div>
