--- a/_posts/2011-05-24-arkham-has-moved.html
+++ b/_posts/2011-05-24-arkham-has-moved.html
@@ -10,7 +10,7 @@ status: finished
 ---
 <div class="12u">
     <span class="image fit">
-        <img src="{{ site.baseurl }}img/BAA2EmblemText.png" alt="" />
-        <img src="{{ site.baseurl }}img/batmanaa2wall.jpg" alt="" />
+        <img src="{{ site.url_dir }}img/BAA2EmblemText.png" alt="" />
+        <img src="{{ site.url_dir }}img/batmanaa2wall.jpg" alt="" />
     </span>
 </div>
