--- a/_posts/2015-10-10-dota-2-loading-screen.html
+++ b/_posts/2015-10-10-dota-2-loading-screen.html
@@ -12,11 +12,11 @@ status: finished
 ---
 <div class="3u align-center">
     <span class="image fit">
-        <img src="{{ site.baseurl }}img/dota_2_logo.png" alt="" />
+        <img src="{{ site.url_dir }}img/dota_2_logo.png" alt="" />
     </span>
 </div>
 <div class="12u">
     <span class="image fit">
-        <img src="{{ site.baseurl }}img/Dota_2_Loading_Nightmare.jpg" alt="" />
+        <img src="{{ site.url_dir }}img/Dota_2_Loading_Nightmare.jpg" alt="" />
     </span>
 </div>
