--- a/about/index.html
+++ b/about/index.html
@@ -77,7 +77,7 @@ Listening: 8.0, Speaking: 6.5 Reading: 6.5, Writing: 5.0</p>
         <a href="../files/kiril_petrov_cv_bg.pdf" class="button special icon fa-download">Bulgarian CV</a>
     </li>
     <li>
-        <a href="{{ 'contact/' | prepend: site.baseurl }}" title="Contact"
+        <a href="{{ 'contact/' | prepend: site.url_dir }}" title="Contact"
           class="button special icon fa-envelope">Contact</a>
     </li>
 </ul>
