cleanup; config changes

--- a/_posts/2008-07-21-first-web-design.html
+++ b/_posts/2008-07-21-first-web-design.html
@@ -11,3 +11,47 @@ client_url: mailto:soft_tech@mail.bg
 role: Design &amp; Coding (HTML + CSS)
 status: finished
 ---
+<div class="box alt">
+    <div class="row uniform 50%">
+        <div class="12u">
+            <span class="image fit">
+                <img src="{{ site.url_dir }}img/design1.jpg" alt="{{ page.title }}" class="image fit" />
+            </span>
+        </div>
+        <div class="12u">
+            <span class="image fit">
+                <img src="{{ site.url_dir }}img/design1.2.jpg" alt="{{ page.title }} Screen" class="image fit" />
+            </span>
+        </div>
+        <div class="12u">
+            <span class="image fit">
+                <img src="{{ site.url_dir }}img/design1.3.jpg" alt="{{ page.title }} Screen" class="image fit" />
+            </span>
+        </div>
+        <div class="12u">
+            <span class="image fit">
+                <img src="{{ site.url_dir }}img/design1.4.jpg" alt="{{ page.title }} Screen" class="image fit" />
+            </span>
+        </div>
+        <div class="12u">
+            <span class="image fit">
+                <img src="{{ site.url_dir }}img/design2_2.jpg" alt="{{ page.title }} Screen" class="image fit" />
+            </span>
+        </div>
+        <div class="12u">
+            <span class="image fit">
+                <img src="{{ site.url_dir }}img/design3.jpg" alt="{{ page.title }} Screen" class="image fit" />
+            </span>
+        </div>
+        <div class="12u">
+            <span class="image fit">
+                <img src="{{ site.url_dir }}img/design4.jpg" alt="{{ page.title }} Screen" class="image fit" />
+            </span>
+        </div>
+        <div class="12u">
+            <span class="image fit">
+                <img src="{{ site.url_dir }}img/design5.jpg" alt="{{ page.title }} Screen" class="image fit" />
+            </span>
+        </div>
+    </div>
+</div>
