--- a/about/index.html
+++ b/about/index.html
@@ -28,16 +28,18 @@ type: information
     <li>Cross-platform Multimedia Desktop & System Services using CPPUAL</li>
 </ul>
 
-<p><i class="icon fa-lightbulb-o"></i> In 2015 I moved to London and decided to pursue a Masters Degree in Electronic Engineering.<br>
-<br>
-Everything I learned about computers I did on my own, except for C++.</p>
+<p>Everything I learned about computers I did on my own, except for C++.</p>
 
 <hr>
 
 <h3><span class="icon fa-industry style3"> Experience</span></h3>
+<p><h4>Solventer Ltd.</h4>
+Web Developer / Programmer / Content Administration / Eletronics<br>
+Burgas, Bulgaria · April 2018 – Present</p>
+
 <p><h4>Gean London Ltd.</h4>
 Web Developer / Designer / Content Administration / Labourer<br>
-London, UK · October 2015 – Present</p>
+London, UK · October 2015 – February 2018</p>
 
 <p><h4>Soft-Tech BG</h4>
 Web Developer / Designer<br>
