--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@ newsfeed_max: 4
             </li>
         </ul>
     </div>
-    <a href="#one" class="more scrolly">Learn Less</a>
+    <a href="#one" class="more scrolly">Learn More</a>
 </section>
 
 <!-- Two -->
