science category desc update

--- a/about/science.html
+++ b/about/science.html
@@ -4,6 +4,6 @@ title: Science & Technology
 tag: Science
 icon: fa-flask
 type: specialty
-description: Physics, Mathematics, Desktop & Laptop Repair, Server Maintenance, A fair knowledge of how the standard architecture & Memristors work
+description: Electronics, KiCAD, Desktop & Laptop Repair, Server Maintenance, A fair knowledge of how the standard architecture & Memristors work
 ---
 {% include specialty_content.html %}
