home page icon changed

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@ newsfeed_max: 4
 <!-- Banner -->
 <section id="banner">
     <div class="inner">
-        <p><a href="#three" class="logo" aria-hidden="true"><i class="fa fa-user-secret"></i></a></p>
+        <p><a href="#three" class="logo" aria-hidden="true"><i class="fa fa-user"></i></a></p>
         <h2>{{ site.title }}</h2>
         <p>{{ site.tagline }}</p>
         <ul class="actions">
