--- a/portfolio/index.html
+++ b/portfolio/index.html
@@ -13,7 +13,7 @@ type: showcase
             <div class="4u 6u(small) 10u(vsmall) 12u(xsmall)">
                 <a href="{{ post.url | replace:'.html','' | prepend: site.url_dir | replace: '//','/' }}" class="image fit shadow">
                     <h4 class="overlay"><span>{{ post.title }}</span></h4>
-                    <img src="{{ post.thumb | prepend: 'img/' | prepend: site.url_dir }}" alt="{{ post.title }}" />
+                    <img src="{{ post.thumb | prepend: 'img/' | prepend: site.url_dir }}" alt="{{ post.title }}"  data-src="{{ post.thumb | prepend: 'img/' | prepend: site.url_dir }}" title="{{ post.title }}" class="lazyload">
                 </a>
             </div>
             {% endif %}
