--- a/index.html
+++ b/index.html
@@ -42,8 +42,12 @@ newsfeed_max: 4
     <div class="image">
         <a href="{{ post.url | remove: '.html' | prepend: site.url_dir | replace: '//','/' }}"
           title="{{ post.title }}">
-            <img src="{{ post.thumb | prepend: 'img/' | prepend: site.url_dir }}" data-src="{{ post.thumb | prepend: 'img/' | prepend: site.url_dir }}"
-             alt="{{ post.title }}" title="{{ post.title }}" class="lazyload">
+            <img data-sizes="auto"
+            src="{{ post.thumb | prepend: 'img/' | prepend: site.url_dir }}"
+            data-src="{{ post.thumb | prepend: 'img/' | prepend: site.url_dir }}"
+            data-srcset="{{ post.thumb | prepend: 'img/' | prepend: site.url_dir }} 600w,
+            {{ post.thumb | prepend: 'img/' | prepend: site.url_dir }} 900w"
+            alt="{{ post.title }}" title="{{ post.title }}" class="lazyload">
         </a>
     </div>
     <div class="content">
