front page explicit width and height set for post pages;

--- a/index.html
+++ b/index.html
@@ -47,7 +47,8 @@ newsfeed_max: 4
             data-srcset="{{ post.thumb | prepend: 'img/' | prepend: site.url_dir }} 300w,
             {{ post.thumb | prepend: 'img/' | prepend: site.url_dir }} 600w,
             {{ post.thumb | prepend: 'img/' | prepend: site.url_dir }} 900w"
-            alt="{{ post.title }}" title="{{ post.title }}" class="lazyload">
+            alt="{{ post.title }}" title="{{ post.title }}" class="lazyload"
+            width="567" height="360">
         </a>
     </div>
     <div class="content">
