updated several about skill categories;

--- a/about/art.html
+++ b/about/art.html
@@ -4,6 +4,6 @@ title: Art
 tag: Art
 icon: fa-paint-brush
 type: specialty
-description: Photoshop, Krita, Designing Websites, Logos, User Interfaces, Photo Enhancement, Good Drawing Skills
+description: Photoshop, Krita, GIMP, Designing Websites, Logos, User Interfaces, Photo Enhancement, Good Drawing Skills
 ---
 {% include specialty_content.html %}
