--- a/about/modeling.html
+++ b/about/modeling.html
@@ -4,6 +4,6 @@ title: 3D Modeling
 tag: 3D
 icon: fa-codepen
 type: specialty
-description: Blender, 3D Max (previously), Character Modeling, Environments, Armature Manipulation, Animations, Polygon Optimization
+description: Blender, 3D Max, Character Modeling, Environments, Armature Manipulation, Animations, Polygon Optimization
 ---
 {% include specialty_content.html %}
