--- a/about/web-development.html
+++ b/about/web-development.html
@@ -4,6 +4,6 @@ title: Web Development
 tag: Development
 icon: fa-html5
 type: specialty
-description: Atom, Visual Studio Code, Sublime Text, PHP, HTML5, CSS3, JavaScript, Responsive Designs, JQuery, Bootstrap, WordPress, Typo3 (TypoScript, Extbase &amp; Fluid), Joomla Extensions, Kirby, Jekyll
+description: PHP, HTML5, CSS3, JavaScript, Responsive Designs, JQuery, Bootstrap, WordPress, Typo3 (TypoScript, Extbase &amp; Fluid), Joomla Extensions, Kirby, Jekyll
 ---
 {% include specialty_content.html %}
