--- a/index.html
+++ b/index.html
@@ -34,11 +34,13 @@ newsfeed_max: 4
 </section>
 
 <section id="two" class="wrapper alt style2">
+<h2>Projects</h2>
 {% assign post_limit = page.newsfeed_max %}
 {% for post in site.posts %}
 {% if post.category == 'Project' %}
 {% if post_limit != 0 %}
 <section class="spotlight">
+    <h2>Project</h2>
     <div class="image">
         <a href="{{ post.url | remove: '.html' | prepend: site.url_dir | replace: '//','/' }}"
           title="{{ post.title }}">
