about specialty cpp updated;

--- a/about/c-cpp-development.html
+++ b/about/c-cpp-development.html
@@ -4,6 +4,6 @@ title: C/C++ Programming
 tag: Programming
 icon: fa-code
 type: specialty
-description: Visual Studio, QtCreator, Unreal Engine 5, OpenGL, OpenCL, Vulkan, Qt, Windows API, Linux Kernel Space API, XCB Window System, AmxxPawn, Extreme Code Optimization
+description: Visual Studio Code, QtCreator, Unreal Engine 5, OpenGL, OpenCL, Vulkan, Qt, Windows API, Linux Kernel Space API, XCB Window System, AmxxPawn, Extreme Code Optimization
 ---
 {% include specialty_content.html %}
