--- a/repositories/index.html
+++ b/repositories/index.html
@@ -1,28 +1,88 @@
 ---
 layout: page_content
-title: Repositories
-icon: fa-code
+title: About
+icon: fa-user-circle
 type: information
 ---
-<section>
-    <h5>Sorted by date</h5>
-    <div class="box alt">
-        <div class="row uniform 50%">
-            {% for post in site.posts %}
-            {% if post.category == 'Project' %}
-            <div class="4u 6u(small) 10u(vsmall) 12u(xsmall)">
-                <a href="{{ post.url | replace:'.html','' | prepend: site.url_dir | replace: '//','/' }}" class="image fit shadow">
-                    <h4 class="overlay"><span>{{ post.title }}</span></h4>
-                    <img data-sizes="auto"
-                    data-src="{{ post.thumb | prepend: 'img/' | prepend: site.url_dir }}"
-                    data-srcset="{{ post.thumb | prepend: 'img/' | prepend: site.url_dir }} 300w,
-                    {{ post.thumb | prepend: 'img/' | prepend: site.url_dir }} 600w,
-                    {{ post.thumb | prepend: 'img/' | prepend: site.url_dir }} 900w"
-                    alt="{{ post.title }}" title="{{ post.title }}" class="lazyload">
-                </a>
-            </div>
-            {% endif %}
-            {% endfor %}
-        </div>
-    </div>
-</section>
+<h3><span class="icon fa-pencil style3"> CPPUAL Project</span></h3>
+
+<ul>
+    <li><a href="https://github.com/insidious-src/CPPUAL">cppual</a></li>
+    <li><a href="https://github.com/insidious-src/cmake-cppual">cmake-cppual</a></li>
+</ul>
+
+<h3><span class="icon fa-pencil style3"> Solaris Project</span></h3>
+
+<ul>
+    <li><a href="https://bitbucket.org/insidious-src/device-controller/src/master/">device-controller</a></li>
+    <li><a href="https://bitbucket.org/solventer/pwr_iot/src/master/">pwr_iot</a></li>
+</ul>
+
+<h3><span class="icon fa-pencil style3"> Web Projects</span></h3>
+
+<ul>
+    <li><a href="https://github.com/insidious-src/cms">Content Management System</a></li>
+    <li><a href="https://bitbucket.org/solventer/radio-muzaica/src/master/">radio-muzaica</a></li>
+    <li><a href="https://bitbucket.org/solventer/texpanel/src/master/">texpanel</a></li>
+    <li><a href="https://bitbucket.org/solventer/kraimorie/src/master/">kraimorie</a></li>
+    <li><a href="https://bitbucket.org/solventer/solventer/src/master/">solventer</a></li>
+    <li><a href="https://github.com/insidious-src/wordpress-fadegal">wordpress-fadegal</a></li>
+    <li><a href="https://bitbucket.org/softtech-bg/wp-solutions-template/src/master/">wp-solutions-template</a></li>
+    <li><a href="https://bitbucket.org/softtech-bg/responsive-template-base/src/master/">responsive-template-base</a></li>
+    <li><a href="https://bitbucket.org/softtech-bg/technologic-merge-template/src">technologic-merge-template</a></li>
+    <li><a href="https://bitbucket.org/softtech-bg/gean-london-template/src">gean-london-template</a></li>
+    <li><a href="https://bitbucket.org/softtech-bg/ajax-responsive-contact-form/src/master/">ajax-responsive-contact-form</a></li>
+    <li><a href="https://bitbucket.org/softtech-bg/cms-common-config/src/master/">cms-common-config</a></li>
+    <li><a href="https://bitbucket.org/softtech-bg/optimus-typo3_6x/src/master/">optimus-typo3_6x</a></li>
+    <li><a href="https://bitbucket.org/softtech-bg/typo3-responsive-layouts-config/src">typo3-responsive-layouts-config</a></li>
+    <li><a href="https://bitbucket.org/softtech-bg/typo3-live-chat-config/src">typo3-live-chat-config</a></li>
+    <li><a href="https://bitbucket.org/softtech-bg/typo3-jquery-effects-config/src">typo3-jquery-effects-config</a></li>
+    <li><a href="https://bitbucket.org/softtech-bg/typo3-wiki-config/src">typo3-wiki-config</a></li>
+    <li><a href="https://bitbucket.org/softtech-bg/typo3-contact-info-config/src">typo3-contact-info-config</a></li>
+    <li><a href="https://bitbucket.org/softtech-bg/typo3-contact-form-config/src">typo3-contact-form-config</a></li>
+    <li><a href="https://bitbucket.org/softtech-bg/typo3-downloads-config/src">typo3-downloads-config</a></li>
+    <li><a href="https://bitbucket.org/softtech-bg/typo3-visitor-tracking-config/src">typo3-visitor-tracking-config</a></li>
+    <li><a href="https://bitbucket.org/softtech-bg/typo3-online-banking-config/src">typo3-online-banking-config</a></li>
+    <li><a href="https://bitbucket.org/softtech-bg/typo3-webshop-config/src">typo3-webshop-config</a></li>
+    <li><a href="https://bitbucket.org/softtech-bg/efa-website/src/master/">efa-website</a></li>
+    <li><a href="https://bitbucket.org/softtech-bg/typo3-rss_generator/src/master/">typo3-rss_generator</a></li>
+    <li><a href="https://bitbucket.org/softtech-bg/typo3-portfolio-config/src">typo3-portfolio-config</a></li>
+    <li><a href="https://bitbucket.org/softtech-bg/typo3-realty-config/src">typo3-realty-config</a></li>
+    <li><a href="https://bitbucket.org/softtech-bg/typo3-social-config/src">typo3-social-config</a></li>
+    <li><a href="https://bitbucket.org/softtech-bg/typo3-business-config/src">typo3-business-config</a></li>
+    <li><a href="https://bitbucket.org/softtech-bg/typo3-forum-config/src">typo3-forum-config</a></li>
+    <li><a href="https://bitbucket.org/softtech-bg/typo3-blog-config/src">typo3-blog-config</a></li>
+</ul>
+
+<h3><span class="icon fa-pencil style3"> DcRD Project</span></h3>
+
+<ul>
+    <li><a href="https://bitbucket.org/softtech-bg/security-center/src">security-center</a></li>
+    <li><a href="https://bitbucket.org/softtech-bg/hardware-manager/src">hardware-manager</a></li>
+    <li><a href="https://bitbucket.org/softtech-bg/morphling/src">morphling</a></li>
+    <li><a href="https://bitbucket.org/softtech-bg/backup-plan/src">backup-plan</a></li>
+    <li><a href="https://bitbucket.org/softtech-bg/software-center/src">software-center</a></li>
+    <li><a href="https://bitbucket.org/softtech-bg/net-traffic-manager/src">net-traffic-manager</a></li>
+    <li><a href="hhttps://bitbucket.org/softtech-bg/media-player/src">media-player</a></li>
+    <li><a href="https://bitbucket.org/softtech-bg/file-manager/src">file-manager</a></li>
+    <li><a href="https://bitbucket.org/softtech-bg/multimedia-library/src">multimedia-library</a></li>
+    <li><a href="https://bitbucket.org/softtech-bg/information-scrapper/src">information-scrapper</a></li>
+    <li><a href="https://bitbucket.org/softtech-bg/home-screen/src">home-screen</a></li>
+    <li><a href="https://bitbucket.org/softtech-bg/image-viewer/src">image-viewer</a></li>
+    <li><a href="https://bitbucket.org/softtech-bg/control-panel/src">control-panel</a></li>
+    <li><a href="https://bitbucket.org/softtech-bg/resources-manager/src">resources-manager</a></li>
+    <li><a href="https://bitbucket.org/softtech-bg/online-services/src">online-services</a></li>
+    <li><a href="https://bitbucket.org/softtech-bg/social-manager/src">social-manager</a></li>
+</ul>
+
+<h3><span class="icon fa-pencil style3"> Counter-Strike 1.6 Mods</span></h3>
+
+<ul>
+    <li><a href="https://github.com/insidious-src/zp50-silent_hill">zp50-silent_hill</a></li>
+</ul>
+
+<h3><span class="icon fa-pencil style3"> Mortal Kombat Projects</span></h3>
+
+<ul>
+    <li><a href="https://github.com/insidious-src/mk4sdk">mk4sdk</a></li>
+</ul>
