repositories page update 2;

--- a/repositories/index.html
+++ b/repositories/index.html
@@ -4,21 +4,21 @@ title: About
 icon: fa-user-circle
 type: information
 ---
-<h3><span class="icon fa-pencil style3"> CPPUAL Project</span></h3>
+<h3><span class="icon fa-code style3"> CPPUAL Project</span></h3>
 
 <ul>
     <li><a href="https://github.com/insidious-src/CPPUAL">cppual</a></li>
     <li><a href="https://github.com/insidious-src/cmake-cppual">cmake-cppual</a></li>
 </ul>
 
-<h3><span class="icon fa-pencil style3"> Solaris Project</span></h3>
+<h3><span class="icon fa-code style3"> Solaris Project</span></h3>
 
 <ul>
     <li><a href="https://bitbucket.org/insidious-src/device-controller/src/master/">device-controller</a></li>
     <li><a href="https://bitbucket.org/solventer/pwr_iot/src/master/">pwr_iot</a></li>
 </ul>
 
-<h3><span class="icon fa-pencil style3"> Web Projects</span></h3>
+<h3><span class="icon fa-code style3"> Web Projects</span></h3>
 
 <ul>
     <li><a href="https://github.com/insidious-src/cms">Content Management System</a></li>
@@ -54,7 +54,7 @@ type: information
     <li><a href="https://bitbucket.org/softtech-bg/typo3-blog-config/src">typo3-blog-config</a></li>
 </ul>
 
-<h3><span class="icon fa-pencil style3"> DcRD Project</span></h3>
+<h3><span class="icon fa-code style3"> DcRD Project</span></h3>
 
 <ul>
     <li><a href="https://bitbucket.org/softtech-bg/security-center/src">security-center</a></li>
@@ -75,13 +75,13 @@ type: information
     <li><a href="https://bitbucket.org/softtech-bg/social-manager/src">social-manager</a></li>
 </ul>
 
-<h3><span class="icon fa-pencil style3"> Counter-Strike 1.6 Mods</span></h3>
+<h3><span class="icon fa-code style3"> Counter-Strike 1.6 Mods</span></h3>
 
 <ul>
     <li><a href="https://github.com/insidious-src/zp50-silent_hill">zp50-silent_hill</a></li>
 </ul>
 
-<h3><span class="icon fa-pencil style3"> Mortal Kombat Projects</span></h3>
+<h3><span class="icon fa-code style3"> Mortal Kombat Projects</span></h3>
 
 <ul>
     <li><a href="https://github.com/insidious-src/mk4sdk">mk4sdk</a></li>
