repositories page update 3;

--- a/repositories/index.html
+++ b/repositories/index.html
@@ -1,7 +1,7 @@
 ---
 layout: page_content
-title: About
-icon: fa-user-circle
+title: Repositories
+icon: fa-code
 type: information
 ---
 <h3><span class="icon fa-code style3"> CPPUAL Project</span></h3>
