updated contact & about pages; added facebook comments to projects;

--- a/index.html
+++ b/index.html
@@ -117,12 +117,12 @@ newsfeed_max: 4
         </header>
         <ul class="actions vertical">
             <li>
-                <a href="{{ 'about/' | prepend: site.url_dir }}" title="About"
-                  class="button fit special icon fa-user">About</a>
+                <a href="{{ 'about/' | prepend: site.url_dir }}" title="About Me"
+                  class="button fit special icon fa-user">About Me</a>
             </li>
             <li>
-                <a href="{{ 'contact/' | prepend: site.url_dir }}" title="Contact"
-                  class="button fit special icon fa-envelope">Contact</a>
+                <a href="{{ 'contact/' | prepend: site.url_dir }}" title="Contact Me"
+                  class="button fit special icon fa-envelope">Contact Me</a>
             </li>
         </ul>
     </div>
