updated about page; updated bg & en cv;

--- a/about/index.html
+++ b/about/index.html
@@ -22,20 +22,55 @@ type: information
 <span><i class="icon fa-calendar-plus-o"></i> Since 2012 I’ve been involved in several big projects:</span>
 <ul>
     <li>Simulation/Game Engine in C++ - Neuron</li>
-    <li>C++ Unified Abstraction Library - Qt replacement utilizing OpenCL & OpenGL (eventually Vulkan) +
+    <li>C++ Unified Abstraction Library - Qt replacement utilizing OpenCL & Vulkan +
   Layered Network Protocols</li>
     <li>Integrated Development Environment in C++</li>
     <li>Cross-platform Multimedia Desktop & System Services using CPPUAL</li>
 </ul>
 
-<p>Everything I learned about computers I did on my own, except for C++.</p>
+<p>Everything I learned about computers I did on my own, except for electronics.</p>
 
 <hr>
 
-<h3><span class="icon fa-industry style3"> Experience</span></h3>
+<h3><span class="icon fa-industry style3">&nbsp;Experience</span></h3>
+
+<p><h4>ФРОНЕРИ БЪЛГАРИЯ ЕООД</h4>
+Складов работник<br>
+Burgas, Bulgaria · July 2025 - August 2025<br>
+Бизнес сектор: Хранителна промишленост, Размер на компанията: 10 -
+20, Заплата: 1600 BGN<br>
+Приемане на стока, подреждане на стоката, правене на поръчки, чистене на
+склада.</p>
+
+<p><h4>Дарис 2019 ЕООД</h4>
+Складов работник<br>
+Burgas, Bulgaria · May 2025 - June 2025<br>
+Бизнес сектор: Хранителна промишленост, Размер на компанията: 5 -
+10, Заплата: 1400 BGN<br>
+Подреждане на склада, подготвяне на стоката за експедиция, чистене на
+склада, приемане на стока.</p>
+
+<p><h4>Метро</h4>
+Сътрудник<br>
+Burgas, Bulgaria · December 2024 - February 2025<br>
+Размер на компанията: над 300, Заплата: 1600 BGN<br>
+Риба - продаване, складиране, чистене, приемане на стока, поддържане на
+цялото помещение.</p>
+
+<p><h4>Болеро ЕООД</h4>
+Общ Работник<br>
+Burgas, Bulgaria · December 2023 - October 2024<br>
+Размер на компанията: над 300, Заплата: 1200 BGN<br>
+товарене и разтоварване; разчистване и прибиране на стоката в склада (или
+където другаде стои обикновенно), получена от дистрибутори; подреждане или
+пренареждане на склада; подреждане на амбалажа; късане и вързване на
+кашони; зареждане на залата; разтоварване на складовия камион (понеделник,
+сряда и петък); разтоварване и прибиране на получената стоката на зеленчука
+в склада му; зареждане на зеленчука.</p>
+
 <p><h4>Solventer Ltd.</h4>
 Web Developer / Programmer / Content Administration / Eletronics<br>
-Burgas, Bulgaria · April 2018 – Present</p>
+Burgas, Bulgaria · April 2018 – June 2023</p>
 
 <p><h4>Gean London Ltd.</h4>
 Web Developer / Designer / Content Administration / Labourer<br>
@@ -43,8 +78,8 @@ London, UK · October 2015 – February 2018</p>
 
 <p><h4>Soft-Tech BG</h4>
 Web Developer / Designer<br>
-Burgas, Bulgaria · June 2009 – November 2012<br>
-Joomla & Typo3 Extensions<br>
+Burgas, Bulgaria · June 2008 – November 2012<br>
+WordPress, Typo3 & Joomla Extensions<br>
 Static Templates & Responsive Design</p>
 
 <hr>
