--- a/about/index.html
+++ b/about/index.html
@@ -35,7 +35,7 @@ type: information
 <h3><span class="icon fa-industry style3">&nbsp;Experience</span></h3>
 
 <p><h4>ФРОНЕРИ БЪЛГАРИЯ ЕООД</h4>
-Складов работник<br>
+<b>Складов работник</b><br>
 Burgas, Bulgaria · July 2025 - August 2025<br>
 Бизнес сектор: Хранителна промишленост, Размер на компанията: 10 -
 20, Заплата: 1600 BGN<br>
@@ -43,7 +43,7 @@ Burgas, Bulgaria · July 2025 - August 2025<br>
 склада.</p>
 
 <p><h4>Дарис 2019 ЕООД</h4>
-Складов работник<br>
+<b>Складов работник</b><br>
 Burgas, Bulgaria · May 2025 - June 2025<br>
 Бизнес сектор: Хранителна промишленост, Размер на компанията: 5 -
 10, Заплата: 1400 BGN<br>
@@ -51,14 +51,14 @@ Burgas, Bulgaria · May 2025 - June 2025<br>
 склада, приемане на стока.</p>
 
 <p><h4>Метро</h4>
-Сътрудник<br>
+<b>Сътрудник</b><br>
 Burgas, Bulgaria · December 2024 - February 2025<br>
 Размер на компанията: над 300, Заплата: 1600 BGN<br>
 Риба - продаване, складиране, чистене, приемане на стока, поддържане на
 цялото помещение.</p>
 
 <p><h4>Болеро ЕООД</h4>
-Общ Работник<br>
+<b>Общ Работник</b><br>
 Burgas, Bulgaria · December 2023 - October 2024<br>
 Размер на компанията: над 300, Заплата: 1200 BGN<br>
 товарене и разтоварване; разчистване и прибиране на стоката в склада (или
