bg cv updated; about page updated; cppual project post updated; css updated;

--- a/about/index.html
+++ b/about/index.html
@@ -6,20 +6,20 @@ type: information
 ---
 <h4>{{ site.author }}</h4>
 <hr>
-<h3><span class="icon fa-pencil style3"> Resume</span></h3>
+<h3><span class="icon fa-pencil style3">&nbsp;Resume</span></h3>
 
 <p>My passion with computers started with a local internet club.
    I had no idea how all that stuff worked but wanted to figure it out.
    Ever since my primary focus has been in that direction.</p>
 
-<p><i class="icon fa-code"></i> In 2008 I started making custom websites from scratch.
+<p><i class="icon fa-code"></i>&nbsp;In 2008 I started making custom websites from scratch.
    Soon after my personal computer science teacher noticed my rapid progress and decided to make me a job offer.
    I was doing mostly web designs and Joomla extensions.
    I did a couple of jobs in Visual Basic, as well.</p>
 
-<i class="icon fa-graduation-cap"></i> In 2010 I graduated The English High School “Geo Milev” located in Burgas.</p>
+<i class="icon fa-graduation-cap"></i>&nbsp;In 2010 I graduated The English High School “Geo Milev” located in Burgas.</p>
 
-<span><i class="icon fa-calendar-plus-o"></i> Since 2012 I’ve been involved in several big projects:</span>
+<span><i class="icon fa-calendar-plus-o"></i>&nbsp;Since 2012 I’ve been involved in several big projects:</span>
 <ul>
     <li>Simulation/Game Engine in C++ - Neuron</li>
     <li>C++ Unified Abstraction Library - Qt replacement utilizing OpenCL & Vulkan +
@@ -36,13 +36,13 @@ type: information
 
 <p><h4>ФРОНЕРИ БЪЛГАРИЯ ЕООД</h4>
 <b>Складов работник</b><br>
-Burgas, Bulgaria · July 2025 - August 2025<br>
+Burgas, Bulgaria · June 2025 - August 2025<br>
 Бизнес сектор: Хранителна промишленост, Размер на компанията: 10 -
 20, Заплата: 1600 BGN<br>
 Приемане на стока, подреждане на стоката, правене на поръчки, чистене на
 склада.</p>
 
-<p><h4>Дарис 2019 ЕООД</h4>
+<p><h4>Роси ЕООД</h4>
 <b>Складов работник</b><br>
 Burgas, Bulgaria · May 2025 - June 2025<br>
 Бизнес сектор: Хранителна промишленост, Размер на компанията: 5 -
@@ -50,7 +50,15 @@ Burgas, Bulgaria · May 2025 - June 2025<br>
 Подреждане на склада, подготвяне на стоката за експедиция, чистене на
 склада, приемане на стока.</p>
 
-<p><h4>Метро</h4>
+<p><h4>Дарис 2019 ЕООД</h4>
+<b>Складов работник</b><br>
+Burgas, Bulgaria · April 2025 - May 2025<br>
+Бизнес сектор: Хранителна промишленост, Размер на компанията: 5 -
+10, Заплата: 1400 BGN<br>
+Подреждане на склада, подготвяне на стоката за експедиция, чистене на
+склада, приемане на стока.</p>
+
+<p><h4>Метро КЕШ ЕНД КЕРИ България ЕООД</h4>
 <b>Сътрудник</b><br>
 Burgas, Bulgaria · December 2024 - February 2025<br>
 Размер на компанията: над 300, Заплата: 1600 BGN<br>
@@ -84,7 +92,7 @@ Static Templates & Responsive Design</p>
 
 <hr>
 
-<h3><span class="icon fa-graduation-cap style3"> Education</span></h3>
+<h3><span class="icon fa-graduation-cap style3">&nbsp;Education</span></h3>
 <p><h4>English High School “Geo Milev”</h4>
 Mathematics<br>
 Burgas, Bulgaria · September 2005 – May 2010
@@ -99,7 +107,7 @@ Highest score in the graduation math exam</p>
 
 <hr />
 
-<h3><span class="icon fa-certificate style3"> Certificates</span></h3>
+<h3><span class="icon fa-certificate style3">&nbsp;Certificates</span></h3>
 <p><h4>IELTS English Language Test, British Council</h4>
 June 2015<br>
 Listening: 8.0, Speaking: 6.5 Reading: 6.5, Writing: 5.0</p>
